# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
.sqlx/: query-0c63655e88b4281d15bc748be6a32a233edd21fdc18485909059aa318ecbacd1.json  query-1cf42c355e41674b90d32e0ca0372287865dadf8ece41b8bac0de460e6c8fb4b.json  query-23478780b3e38a2e2d874cabc6910890170b8f0871beafd67140df90fc00103d.json  query-24ed7d87ec8d44f716e243024e99954304aa59c0f61fe15d1a9e1be96db34f10.json  query-3ae61fdaad5eb177486c789f79badde29ccb5c8248c2259360ff88ac71ba7445.json  query-53ac4cdb06eefd6c3d88936e0ca3577a119cc95dd443f27b5ec4b90a0c2f0cac.json  query-59702ca1a875660e911abb157fc61bab0a0192a61a98ab3e51ffd96c058fbaec.json  query-5c3460e07b6f439be32ef3ebc76f1bc60e19f265cd976ea01370c825a37e26f8.json  query-82487231b64804c7baf8ffb5104692ca4c7afa95666bb3556f95ed595d989cf3.json  query-8904842ca2081847a6be863851d2d8be125627936aa6453847266246a6ec56a6.json  query-89c8237a36d433625d210df74a7a261259410250ab22dc578ab5d094383da65a.json  query-9e4bfe90a057964d6c17c80eea3ea82c4f8cbbbd69664f779809bfa8b3d72c6a.json  query-a6bb6620fa3aef80bf97ba9bd93024d2899e62a2a33f3f5e4205a117540cdaea.json  query-a7fbc151e283d35219033b66b3aedfe56e400450fcc770e195dc6cf614dca56c.json  query-b1931228737d6344a2db85685fb5b6820170ab8753855446bdcbec0801cd5396.json  query-b75335d71d70f15c4bef71dfb07b22651cd7f383dba07bffb951ce21d559e6b8.json  query-c230fd3e3e9172ec1714be87fec9be296e1885d67048026438e31e0a8e9d874a.json  query-c6942b6a179e3046df37ff651f781f12776e4b86ba121f5f92f45e17ed7fa7ad.json  query-dfa8fd892a3063747feccb109a2279f112233f94e92fbb5fb268f591008b4921.json  query-fd38cf14ff2cfa9fd9785c21d6a4b5dab10dc57a1995f8aecce5a0c71ce2913d.json
configuration/: base.yaml  production.yaml
migrations/: 20200914024339_create_subscriptions_table.sql  20240121204625_add_status_to_subscriptions.sql  20240121205447_make_status_not_null_in_subscriptions.sql  20240121210120_create_subscription_tokens_table.sql  20240210050945_create_users_table.sql  20240210055425_remove_salt_from_users.sql  20240211053121_seed_user.sql  20240211175349_create_idempotency_table.sql  20240211190953_create_newsletter_issues_table.sql  20240211191447_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
